--- a/src/components/schema-preview/index.less
+++ b/src/components/schema-preview/index.less
@@ -9,7 +9,7 @@
 .schema-preview {
   margin: 5px;
   padding: 7px;
-  max-height: 200px;
+  max-height: 300px;
   overflow: scroll;
   border: 1px solid #e5e0c6;
   border-radius: 3px;
